add code for tutorial

--- a/code/package.json
+++ b/code/package.json
@@ -11,11 +11,16 @@
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
     "commonmark": "^0.27.0",
+    "core-js": "^2.4.1",
+    "handlebars": "^4.0.10",
     "jquery": "^2.2.4",
     "jquery-validation": "^1.16.0",
+    "juice": "^4.1.0",
     "lodash": "^4.17.4",
     "meteor-node-stubs": "~0.2.4",
+    "moment": "^2.18.1",
     "prop-types": "^15.5.10",
+    "qs": "^6.5.0",
     "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-bootstrap": "^0.31.0",
